@@ -1,5 +1,6 @@
 Version 3.1.1 To be released
 ============================
+BUG: Ticket#656 - TDatePicker does not return correct value when in callback mode (Christophe)
 BUG: Ticket#670 - TDatePicker: Year Issue (Christophe)
 ENH: Added THead requirement check (Qiang)
 
